[tool.poetry]
name = "tfpy"
version = "0.3.0"
description = "Create Terraform resources using Python"
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://rgreinho.github.io/tfpy"
repository = "https://github.com/rgreinho/tfpy"
documentation = "https://rgreinho.github.io/tfpy"
keywords = [
  "terraform"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
terraformpy = "1.2.3"
typer = "^0.1.1"
pyyaml = "^5.3.1"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
bpython = "0.18"
black = "^19.10b0"
pytest = "^5.4.1"
invoke = "^1.4.1"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
flake8 = "^3.7.9"
Faker = "^4.0.3"
Sphinx = "^3.0.2"
pytest-mock = "^3.1.0"
recommonmark = "^0.6.0"
aiohttp-theme = "^0.1.6"

[tool.poetry.scripts]
tfpy = "tfpy.main:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
